Minty was actually quite ugly

--- a/ACQ-Proto/UI/static/index.html
+++ b/ACQ-Proto/UI/static/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>POE Recipes</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/minty/bootstrap.min.css">
+    <title>ACQ Prototype App</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lux/bootstrap.min.css">
     <script src="polyfill.js"></script>
     <script src="app.js"></script>
 </head>
